<resources>
    <string name="app_name">Revolut Pay Demo</string>
    <string name="revolut_pay_demo">Revolut Pay Demo</string>
    <string name="configure_sdk">Configure SDK</string>
    <string name="checkout_example">Checkout Example</string>
    <string name="checkout_custom">Checkout Custom</string>
    <string name="button_styles">Button styles</string>
    <string name="promo_banner">Promotional Banner</string>
    <string name="revolut_app_installation_check">Revolut application installation check</string>
    <string name="revolut_application_installed">Revolut application is installed</string>
    <string name="revolut_application_not_installed">Revolut application is not installed</string>
    <string name="environment">Environment</string>
    <string name="production">Production</string>
    <string name="sandbox">Sandbox</string>
    <string name="update">Update</string>
    <string name="merchant_public_key">Merchant Public Key</string>
    <string name="merchant_public_key_hint">pk_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="order_token">Order token</string>
    <string name="order_token_hint">Order token</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_completed">Checkout completed successfully</string>
    <string name="checkout_failed">Checkout failed</string>
    <string name="checkout_abandoned">Checkout abandoned</string>
    <string name="variants">Variants</string>
    <string name="attachments">Attachments</string>
    <string name="radius">Radius</string>
    <string name="size">Size</string>
    <string name="currency">Currency</string>
</resources>