<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/configureSdkTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/configure_sdk"
        android:textColor="?attr/colorOnBackground"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/revolutPayEnvironmentTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/environment"
        android:textColor="?attr/colorOnBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configureSdkTitle" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/revolutPayEnvironmentGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:checkedButton="@id/revolutPayEnvironmentProductionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolutPayEnvironmentTitle"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/revolutPayEnvironmentProductionButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/production" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/revolutPayEnvironmentSandboxButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sandbox" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/revolutPayMerchantPublicKeyTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/merchant_public_key"
        android:textColor="?attr/colorOnBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolutPayEnvironmentGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/revolutPayMerchantPublicKeyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="?attr/colorOnPrimary"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeWidth="0dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolutPayMerchantPublicKeyTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/revolutPayMerchantPublicKeyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_public_key_hint"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/revolutPayOrderTokenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/order_token"
        android:textColor="?attr/colorOnBackground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolutPayMerchantPublicKeyLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="?attr/colorOnPrimary"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:boxStrokeWidth="0dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/revolutPayOrderTokenTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/revolutPayOrderTokenEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_token_hint"
            android:textSize="15sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/revolutPayConfigureSdkUpdateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:enabled="false"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>